# MoneyPrintingMachine

./: .env  .gitignore  PRISM.py  PRISM_5dWeek_BusinessDaysOnly.py  PRISM_7dWeek_ReMappedWeekend.py  PRISM_ZerosForWeekend  README.md  pyproject.toml  requirements.txt
data/amazon volume per day/2010/: AMZN_volume_2010_01.csv  AMZN_volume_2010_02.csv  AMZN_volume_2010_03.csv  AMZN_volume_2010_04.csv  AMZN_volume_2010_05.csv  AMZN_volume_2010_06.csv  AMZN_volume_2010_07.csv  AMZN_volume_2010_08.csv  AMZN_volume_2010_09.csv  (+3 more)
data/decade/: sp500_volume_1980s.csv  sp500_volume_1990s.csv  sp500_volume_2000s.csv
data/years/: sp500_volume_2005.csv  sp500_volume_2006.csv  sp500_volume_2007.csv  sp500_volume_2008.csv  sp500_volume_2009.csv  sp500_volume_2010.csv  sp500_volume_2011.csv  sp500_volume_2012.csv  sp500_volume_2013.csv  sp500_volume_2014.csv  sp500_volume_2015.csv  sp500_volume_2016.csv  sp500_volume_2018.csv  sp500_volume_2019.csv
output/: combined.csv  significant_periods.csv
output/amazon/: significant_periods.csv
prism/: .env  __init__.py  cli.py  config.py  fourier.py  preprocess.py  run.py  visuals.py
prism.egg-info/: PKG-INFO  SOURCES.txt
prism/io/: alpaca.py  yahoo.py
src/: __init__.py  apiPullDecades.py  apiPullMonths.py  apiPullYears.py  config.py  fetch.py  fourierWithCSVs.py  main.py  metrics.py  plots.py  preprocess.py
src/old/: FourierDay.py  FourierMonth.py  FourierYear.py
zach old implementation/: fourierWithCSVs.py
zach old implementation/moneyprintingmachine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+412 files in other folders)
